--- a/frontend/src/Components/NavBar/NavBar.css
+++ b/frontend/src/Components/NavBar/NavBar.css
@@ -1,10 +1,5 @@
-*{
-    padding: 0px;
-    margin: 0px;
-}
-
 .NavBar{
-    background-color: black;
+    /* background-color: black; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
