--- a/frontend/src/Components/AudioPodcastCard/AudioPodcastCard.css
+++ b/frontend/src/Components/AudioPodcastCard/AudioPodcastCard.css
@@ -12,7 +12,7 @@
 }
 
 .audioImage img{
-    position: absolute;
+    /* position: absolute; */
     width: 526.04px;
     height: 248.96px;
     left: 0px;
@@ -20,18 +20,18 @@
 }
 
 .audioText{
-    position: absolute;
+    /* position: relative; */
     width: 465px;
     height: 278px;
-    left: 20px;
-    top: 254px;
+    margin-left: 20.83px;
+    margin-top: 15.62px;
 }
 
 .audioCategory{
-    position: relative;
+    /* position: relative; */
     width: 214px;
     height: 20px;
-    top: 15px;
+    /* top: 15px; */
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -50,11 +50,11 @@
 }
 
 .audioHeading{
-    position: relative;
+    /* position: relative; */
     width: 465px;
     height: 117px;
     /* left: 20px; */
-    top: 30px;
+    margin-top: 10.25px;
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -72,10 +72,10 @@
 }
 
 .audioSubheading{
-    position: relative;
+    /* position: relative; */
     width: 465px;
     height: 66px;
-    top: 40px;
+    margin-top: 12.37px;
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -102,11 +102,11 @@
     padding: 0px;
     gap: 153px;
 
-    position: relative;
+    /* position: relative; */
     width: 465px;
     height: 36px;
     /* left: 20px; */
-    top: 60px;
+    margin-top: 17.46px;
     /* bottom: 20px; */
 }
 
