--- a/frontend/src/Components/VideoPodcastCard/VideoPodcastCard.css
+++ b/frontend/src/Components/VideoPodcastCard/VideoPodcastCard.css
@@ -12,7 +12,7 @@
 }
 
 .videoImage img{
-    position: absolute;
+    /* position: absolute; */
     width: 526.04px;
     height: 248.96px;
     left: 626.87px;
@@ -20,19 +20,19 @@
 }
 
 .videoText{
-    position: absolute;
+    /* position: absolute; */
     width: 465px;
     height: 278px;
-    left: 20px;
-    top: 254px;
+    margin-left: 20.83px;
+    margin-top: 15.62px;
 }
 
 .videoCategory{
-    position: relative;
+    /* position: relative; */
     width: 214px;
     height: 20px;
-    top: 15px;
-    left: 626.87px;
+    /* top: 15px; */
+    /* left: 626.87px; */
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -51,11 +51,11 @@
 }
 
 .videoHeading{
-    position: relative;
+    /* position: relative; */
     width: 465px;
     height: 117px;
-    left: 626.87px;
-    top: 30px;
+    /* left: 626.87px; */
+    margin-top: 10.25px;
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -73,11 +73,10 @@
 }
 
 .videoSubheading{
-    position: relative;
+    /* position: relative; */
     width: 465px;
     height: 66px;
-    top: 40px;
-    left: 626.87px;
+    margin-top: 12.37px;
 
     font-family: 'Montserrat';
     font-style: normal;
@@ -104,11 +103,11 @@
     padding: 0px;
     gap: 153px;
 
-    position: relative;
+    /* position: relative; */
     width: 465px;
     height: 36px;
-    left: 626.87px;
-    top: 60px;
+    /* left: 626.87px; */
+    margin-top: 17.46px;
     /* bottom: 20px; */
 }
 
