--- a/frontend/src/Components/CarouselComponent/CarouselComponent.css
+++ b/frontend/src/Components/CarouselComponent/CarouselComponent.css
@@ -29,7 +29,7 @@
     align-items: center;
     padding: 8px;
     gap: 8px;
-    font-family: "Montserrat" ;
+    font-family: "Clash Display" ;
 
     /* position: absolute; */
     width: 40px;
