--- a/frontend/src/Components/NavBar/NavBar.css
+++ b/frontend/src/Components/NavBar/NavBar.css
@@ -7,11 +7,13 @@
     padding: 0px;
     /* gap: 791px; */
 
-    position: absolute;
-    width: 1300px;
-    height: 44px;
-    left: 70px;
-    top: 40px;
+    /* position: absolute; */
+    /* width: 1300px;
+    height: 44px; */
+    width: 90.27%;
+    height: 2.45%;
+    margin-left: 4.86%;
+    padding-top: 2.23%;
 
 }
 
