--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 /* @import url('../public/fonts/index.css'); */
 
-*{
+* {
     padding: 0px;
     margin: 0px;
 }
 
-.home{
+.home {
     background-image: url("./Assests/Landing\ Page.png");
     /* background-repeat: no-repeat; */
     width: 1440px;
@@ -14,7 +15,8 @@
     background-size: cover;
 }
 
-.login,.signUp{
+.login,
+.signUp {
     background-image: url("./Assests/Landing\ Page.png");
     background-size: cover;
     width: 1440px;
