--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap');
 
 /* @import url('../public/fonts/index.css'); */
 
@@ -7,18 +7,8 @@
     margin: 0px;
 }
 
-.home {
-    background-image: url("./Assests/Landing\ Page.png");
-    /* background-repeat: no-repeat; */
-    width: 1440px;
-    height: 1789px;
-    background-size: cover;
-}
-
-.login,
-.signUp {
+.bg {
     background-image: url("./Assests/Landing\ Page.png");
     background-size: cover;
-    width: 1440px;
-    height: 750px;
+    width: 100%;
 }
