--- a/frontend/src/Components/Carousel/Carousel.css
+++ b/frontend/src/Components/Carousel/Carousel.css
@@ -1,55 +1,53 @@
-.carousel{
-    position: absolute;
-    width: 1300px;
-    height: 810px;
-    left: 70px;
-    top: 920px;
-
+.carousel {
+    /* position: absolute; */
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    /* justify-content: center; */
+    width: 70%;
+    padding: 40px 40px 100px 40px;
+    height: auto;
+    gap: 50px;
+    /* top: 920px; */
+    margin: 200px auto;
     background: linear-gradient(98.05deg, #303030 -89.33%, rgba(48, 48, 48, 0) 98%);
     border-radius: 10px;
 }
 
-.carouselHeading{
+.carouselHeading {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 0px;
     gap: 80px;
-
-    position: absolute;
+    /* position: absolute; */
     width: 1220px;
     height: 59px;
     left: 40px;
     top: 34px;
-
     background: none;
 }
 
-.carouselText{
+.carouselText {
     width: 690px;
     height: 59px;
-
     font-family: 'Clash Display';
     font-style: normal;
     font-weight: 500;
     font-size: 48px;
     line-height: 59px;
     /* identical to box height */
-
     display: flex;
     align-items: center;
-
     /* primary */
-
     color: #FF9800;
     background: none;
 }
 
-.carouselViewAll{
+.carouselViewAll {
     width: 80px;
     height: 24px;
-
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -64,13 +62,12 @@
     background: none;
 }
 
-.carouselElemets{
-    position: absolute;
+.carouselElemets {
+    /* position: absolute; */
     width: 1152.08px;
     height: 575px;
     left: 74px;
     top: 145px;
-
     background: none;
-/* background-color: red; */
+    /* background-color: red; */
 }
