--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,27 +1,30 @@
-.footer{
+.footer {
+    margin-top: 50px;
     /* position: absolute; */
     /* position: absolute; */
-    width: 1440px;
+    width: 100%;
     height: 376px;
     /* left: 0px; */
     /* margin-top: 1789px; */
     background-color: #1C1C1C;
 }
 
-.footerTop{
-    width: 1299.85px;
+.footerTop {
+    width: 80%;
     height: 195px;
-    margin-left: 70px;
+    margin: 0 auto;
+    /* margin-left: 70px; */
     padding-top: 48px;
     display: flex;
+    justify-content: space-between;
 }
 
-.footerText{
+.footerText {
     width: 640px;
-height: 195px;
+    height: 195px;
 }
 
-.footerTextIcon{
+.footerTextIcon {
     /* position: absolute; */
     width: 260px;
     height: 51px;
@@ -29,52 +32,46 @@ height: 195px;
     /* top: 48px; */
 }
 
-.footerTextHeading{
+.footerTextHeading {
     /* position: absolute; */
-    width: 640px;
+    width: 100%;
     height: 124px;
     /* left: 70px; */
     margin-top: 20px;
-
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
     /* or 150% */
-
-
     color: #FFFFFF;
 }
 
-.footerDownload{
+.footerDownload {
     /* position: absolute; */
-    width: 377.85px;
+    /* width: 40%; */
     height: 110px;
     margin-left: 282px;
     margin-top: 51px;
 }
 
-.downloadText{
+.downloadText {
     /* position: absolute; */
     width: 141px;
     height: 30px;
     /* left: 992px; */
     /* top: 1888px; */
     margin-bottom: 30px;
-
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 30px;
     /* identical to box height, or 150% */
-
-
     color: #FFFFFF;
 }
 
-.downloadImage{
+.downloadImage {
     display: flex;
     /* position: absolute; */
     width: 377.85px;
@@ -82,20 +79,18 @@ height: 195px;
     /* left: 992px; */
     /* top: 1948px; */
     justify-content: space-between;
-
 }
 
-.appStore img{
+.appStore img {
     width: 179.67px;
     height: 50px;
     /* left: 992px; */
     /* top: 1948px; */
-
     /* background: url(image.png); */
     border-radius: 6px;
 }
 
-.googlePlay img{
+.googlePlay img {
     /* position: absolute; */
     width: 181.17px;
     height: 50px;
@@ -103,37 +98,33 @@ height: 195px;
     /* top: 1948px; */
 }
 
-.copyright{
+.copyright {
     display: flex;
     /* flex-direction: row; */
     justify-content: space-between;
     align-items: center;
     padding: 0px;
     /* gap: 909px; */
-
     /* position: absolute; */
-    width: 1300px;
+    width: 80%;
     height: 40px;
-    margin-left: 70px;
-    margin-top: 29px;
+    margin: 29px auto;
 }
 
-.copyrightText{
+.copyrightText {
     width: 642px;
     height: 30px;
-
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
     /* identical to box height, or 150% */
-
     color: #FFFFFF;
     /* display: flex; */
 }
 
-.copyrightImage{
+.copyrightImage {
     display: flex;
     /* displ */
     width: 187.58px;
