--- a/frontend/src/Components/NavBar/NavBar.css
+++ b/frontend/src/Components/NavBar/NavBar.css
@@ -9,9 +9,9 @@
     /* position: absolute; */
     /* width: 1300px;
     height: 44px; */
-    width: 90.27%;
-    height: 2.45%;
-    margin-left: 4.86%;
+    width: 80%;
+    /* height: 2.45%; */
+    margin: 0 auto;
     padding-top: 2.23%;
 }
 
@@ -72,7 +72,7 @@ img {
     color: white;
     font-family: 'Montserrat';
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 20px;
     line-height: 24px;
     display: flex;
@@ -111,7 +111,7 @@ a {
     /* height: 24px; */
     font-family: 'Montserrat';
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 20px;
     line-height: 24px;
     display: flex;
