--- a/frontend/src/Components/CarouselComponent/CarouselComponent.css
+++ b/frontend/src/Components/CarouselComponent/CarouselComponent.css
@@ -19,6 +19,11 @@ img {
     border-radius: 10px;
 }
 
+.audioCard:hover,
+.videoCard:hover {
+    cursor: pointer;
+}
+
 .slick-prev {
     margin-left: 1096px;
     z-index: 5;
