--- a/frontend/src/Components/BingeWorthy/BingeWorthy.css
+++ b/frontend/src/Components/BingeWorthy/BingeWorthy.css
@@ -1,9 +1,11 @@
-.bingeWorthy .elementsOfCarousel{
-    width: 311.05px;
+.bingeWorthy .elementsOfCarousel {
+    margin-top: 30px;
+    width: auto;
     height: 370px;
 }
 
-.bingeWorthy .audioPodcast,.bingeWorthy .videoPodcast{
+.bingeWorthy .audioPodcast,
+.bingeWorthy .videoPodcast {
     /* background: red; */
     width: 311.05px;
     height: 339.68px;
@@ -11,30 +13,35 @@
     border-radius: 10.4167px;
 }
 
-.bingeWorthy .audioImage img,.bingeWorthy .videoImage img{
+.bingeWorthy .audioImage img,
+.bingeWorthy .videoImage img {
     width: 311.05px;
     height: 147.21px;
 }
 
-.bingeWorthy .audioCard,.bingeWorthy .videoCard{
+.bingeWorthy .audioCard,
+.bingeWorthy .videoCard {
     background-color: transparent;
 }
 
-.bingeWorthy .audioText,.bingeWorthy .videoText{
+.bingeWorthy .audioText,
+.bingeWorthy .videoText {
     width: 286.41px;
     height: 170.91px;
     margin-top: 9.24px;
     margin-left: 12.34px;
 }
 
-.bingeWorthy .audioCategory,.bingeWorthy .videoCategory{
+.bingeWorthy .audioCategory,
+.bingeWorthy .videoCategory {
     width: 132px;
     height: 12px;
     font-size: 9.85507px;
     line-height: 12px;
 }
 
-.bingeWorthy .audioHeading,.bingeWorthy .videoHeading{
+.bingeWorthy .audioHeading,
+.bingeWorthy .videoHeading {
     margin-top: 6.48px;
     width: 286.41px;
     height: 72px;
@@ -42,11 +49,13 @@
     line-height: 24px;
 }
 
-.bingeWorthy .audioHeadingText,.bingeWorthy .videoHeadingText{
+.bingeWorthy .audioHeadingText,
+.bingeWorthy .videoHeadingText {
     width: 233.44px;
 }
 
-.bingeWorthy .audioSubheading,.bingeWorthy .videoSubheading{
+.bingeWorthy .audioSubheading,
+.bingeWorthy .videoSubheading {
     width: 286.41px;
     height: 42px;
     font-size: 9.85507px;
@@ -54,14 +63,16 @@
     margin-top: 6.46px;
 }
 
-.bingeWorthy .audioPodcastCreator,.bingeWorthy .videoPodcastCreator{
+.bingeWorthy .audioPodcastCreator,
+.bingeWorthy .videoPodcastCreator {
     width: 286.41px;
     height: 21.86px;
     margin-top: 10.12px;
     gap: 0px;
 }
 
-.bingeWorthy .creatorName,.bingeWorthy .creatorName{
+.bingeWorthy .creatorName,
+.bingeWorthy .creatorName {
     width: 148.49px;
     height: 21.86px;
     font-size: 9.85507px;
@@ -69,27 +80,29 @@
     margin-left: 9.85px;
 }
 
-.bingeWorthy .creatorName svg,.bingeWorthy .creatorName svg{
+.bingeWorthy .creatorName svg,
+.bingeWorthy .creatorName svg {
     width: 9.86px;
     height: 9.86px;
     margin-right: 4.93px;
     /* margin-left: ; */
 }
 
-.bingeWorthy .creatorTime,.bingeWorthy .creatorTime{
+.bingeWorthy .creatorTime,
+.bingeWorthy .creatorTime {
     width: 60px;
     height: 12px;
     font-size: 9.85507px;
     line-height: 12px;
 }
 
-.bingeWorthy .audioLogo{
+.bingeWorthy .audioLogo {
     width: 41.27px;
     height: 41.27px;
     margin-left: 11.7px;
 }
 
-.bingeWorthy .audioLogo svg{
+.bingeWorthy .audioLogo svg {
     width: 41.27px;
     height: 41.27px;
 }
