--- a/frontend/src/Components/BingeWorthy/BingeWorthy.css
+++ b/frontend/src/Components/BingeWorthy/BingeWorthy.css
@@ -22,6 +22,7 @@
 .bingeWorthy .audioCard,
 .bingeWorthy .videoCard {
     background-color: transparent;
+    width: auto;
 }
 
 .bingeWorthy .audioText,
