--- a/frontend/src/Components/Dashboard/DashboardComponent.css
+++ b/frontend/src/Components/Dashboard/DashboardComponent.css
@@ -1,3 +1,10 @@
+#notHidden{
+    display: block;
+}
+#hidden{
+    display: none;
+}
+
 .dashboardComponent{
     margin-top: 30px;
     margin-left: 195px;
