--- a/frontend/src/Components/AudioPodcastCard/AudioPodcastCard.css
+++ b/frontend/src/Components/AudioPodcastCard/AudioPodcastCard.css
@@ -1,3 +1,11 @@
+.playShow,.pauseShow{
+    display: block;
+}
+
+.playHidden,.pauseHidden{
+    display: none;
+}
+
 .audioPodcast {
     /* position: absolute; */
     width: 526.04px;
